--- a/uj/zajecia/25-26z/ljk4/zajecia/znaki/5/index.html
+++ b/uj/zajecia/25-26z/ljk4/zajecia/znaki/5/index.html
@@ -272,32 +272,32 @@
 	<tr>
 		<td>萬一</td>
 		<td>(경우, 대비하다, 저축하다)</td>
-		<td></td>
+		<td><strong>만일(萬一)</strong>의 경우를 대비하려고 저축하고 있어요.</td>
 	</tr>
 	<tr>
 		<td>第一</td>
 		<td>(지선, 어리다, 친하다, 친구)</td>
-		<td></td>
+		<td>지선이는 어릴 때는 <strong>제일(第一)</strong> 싫어했는데 지금은 아주 친한 친구예요.</td>
 	</tr>
 	<tr>
 		<td>同一</td>
 		<td>(조건, 재시험, 실시하다)</td>
-		<td></td>
+		<td>선생님은 <strong>동일(同一)</strong> 조건으로 재시험을 실시하신답니다.</td>
 	</tr>
 	<tr>
 		<td>唯一</td>
 		<td>(감상하다, 나, 취미)</td>
-		<td></td>
+		<td>예술 작품을 감상하는 것이 나의 <strong>유일(唯一)</strong>한 취미이다.</td>
 	</tr>
 	<tr>
 		<td>單一</td>
 		<td>(북한, 민족, 국가)</td>
-		<td></td>
+		<td>북한은 <strong>단일(單一)</strong>민족국가로 알려져 있다.</td>
 	</tr>
 	<tr>
 		<td>統一</td>
 		<td>(장벽, 동독, 서독])</td>
-		<td></td>
+		<td>베를린 장벽이 무너지면서 동독과 서독이 <strong>통일(統一)</strong>되었다.</td>
 	</tr>
 	<tr>
 		<td>均一</td>
