--- a/uj/zajecia/24-25z/assk/index.html
+++ b/uj/zajecia/24-25z/assk/index.html
@@ -65,17 +65,17 @@
 		<li>architektura</li>
 		<li>ceramika i garncarstwo</li>
 		<li>dolmeny</li>
-		<li>filmy i seriale</li>
 		<li>folklor</li>
 		<li>fotografia</li>
 		<li>kaligrafia</li>
-		<li>K-pop</li>
 		<li>malowidła ścienne</li>
 		<li>poezja</li>
 		<li>sztuka kulinarna</li>
 		<li>taniec</li>
 		<li>tatuaże</li>
 		<li>teatr muzyczny</li>
+		<li><del>filmy i seriale</del></li>
+		<li><del>K-pop</del></li>
 	</ul>
 </details>
 
@@ -120,20 +120,20 @@
 			<tr>
 				<th scope="row">4</th>
 				<td>28 października 2024</td>
-				<td class="schedule-lecture">Zajęcia 4</td>
-				<td class="schedule-lecture"><a href="uj/zajecia/24-25z/assk/zajecia/4">K-pop</a></td>
+				<td class="schedule-lecture" rowspan="2">Zajęcia 4</td>
+				<td class="schedule-lecture" rowspan="2"><a href="uj/zajecia/24-25z/assk/zajecia/4">K-pop</a></td>
 			</tr>
-		</tbody>
-		<tbody>
 			<tr>
-				<th scope="row" rowspan="2">5</th>
-				<td rowspan="2">4 listopada 2024</td>
+				<th scope="row" rowspan="3">5</th>
+				<td rowspan="3">4 listopada 2024</td>
+			</tr>
+			<tr>
 				<td class="schedule-exam">Kolokwium 1</td>
 				<td class="schedule-exam">muzyka, malarstwo, literatura</td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture">Zajęcia 5</td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25z/assk/zajecia/5">filmy</a></td>
 			</tr>
 		</tbody>
 		<tbody>
