--- a/uj/zajecia/24-25z/assk/zajecia/4/index.html
+++ b/uj/zajecia/24-25z/assk/zajecia/4/index.html
@@ -185,10 +185,10 @@
 </ul>
 
 <p>
-	아 요즘 미친 미친 거 같아
-	기침 기침하게 만드는 여자들 옷차림 다 비침 비침
-	(베리마취) 땡큐! 내 시력을 올려줘
-	(자연라식) 돈 들일 필요 없어
+	아 요즘 미친 미친 거 같아<br>
+	기침 기침하게 만드는 여자들 옷차림 다 비침 비침<br>
+	(베리마취) 땡큐! 내 시력을 올려줘<br>
+	(자연라식) 돈 들일 필요 없어<br>
 </p>
 
 <p>
