--- a/uj/zajecia/24-25z/ljk4/zajecia/2/index.html
+++ b/uj/zajecia/24-25z/ljk4/zajecia/2/index.html
@@ -22,7 +22,7 @@
 	<p>휴대 전화를 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 내려야 할 역을 지나쳤다.</p>
 	<ol>
 		<li>보든지</li>
-		<li>보다가</li>
+		<li>보다가 <strong class="correct">✓</strong></li>
 		<li>보려면</li>
 		<li>보고서</li>
 	</ol>
@@ -37,7 +37,7 @@
 		<li>이사한 지</li>
 		<li>이사하거든</li>
 		<li>이사하려면</li>
-		<li>이사하고 나서</li>
+		<li>이사하고 나서 <strong class="correct">✓</strong></li>
 	</ol>
 </div>
 
@@ -52,7 +52,7 @@
 	</ul>
 	<p>두 사람은 오랫동안 알고 지냈지만 직장 동료 <u>사이일 뿐이다</u>.</p>
 	<ol>
-		<li>사이에 불과하다</li>
+		<li>사이에 불과하다 <strong class="correct">✓</strong></li>
 		<li>사이라면 좋겠다</li>
 		<li>사이일지도 모른다</li>
 		<li>사이라고 볼 수 없다</li>
@@ -71,7 +71,7 @@
 		<li>늘리자마자</li>
 		<li>늘리더라도</li>
 		<li>늘리는 대신</li>
-		<li>늘리기 위해</li>
+		<li>늘리기 위해 <strong class="correct">✓</strong></li>
 	</ol>
 </div>
 
@@ -91,7 +91,7 @@
 		<img src="uj/zajecia/24-25z/ljk4/zajecia/2/img/5.png" alt="5">
 	</div>
 	<ol>
-		<li>사원 모집</li>
+		<li>사원 모집 <strong class="correct">✓</strong></li>
 		<li>여행 소개</li>
 		<li>제품 설명</li>
 		<li>판매 안내</li>
@@ -114,7 +114,7 @@
 		<img src="uj/zajecia/24-25z/ljk4/zajecia/2/img/6.png" alt="5">
 	</div>
 	<ol>
-		<li>관람 규칙</li>
+		<li>관람 규칙 <strong class="correct">✓</strong></li>
 		<li>제품 소개</li>
 		<li>사용 방법</li>
 		<li>예약 문의</li>
@@ -132,7 +132,7 @@
 	</div>
 	<ol>
 		<li>연필</li>
-		<li>휴지</li>
+		<li>휴지 <strong class="correct">✓</strong></li>
 		<li>책상</li>
 		<li>거울</li>
 	</ol>
@@ -264,8 +264,8 @@
 </div>
 
 <div class="exam-question">
-	<h3>[13~15]. 다음을 순서에 맞게 배열한 것을 고르십시오.</h3>
-	<h4>13.</h4>
+	<h2>[13~15]. 다음을 순서에 맞게 배열한 것을 고르십시오.</h2>
+	<h3>13.</h3>
 	<ul>
 		<li>선택 - wybór</li>
 		<li>부담 - ciężar</li>
@@ -297,7 +297,7 @@
 	</ol>
 </div>
 <div class="exam-question">
-	<h4>14.</h4>
+	<h3>14.</h3>
 	<ul>
 		<li>로비 - lobby, poczekalnia</li>
 		<li>외부인 - osoba z zewnątrz, obcy</li>
@@ -324,7 +324,7 @@
 	</ol>
 </div>
 <div class="exam-question">
-	<h4>15.</h4>
+	<h3>15.</h3>
 	<ul>
 		<li>모래 - piasek</li>
 		<li>일정 - określony, konkretny</li>
@@ -350,72 +350,145 @@
 	</ol>
 </div>
 
-<!-- <div class="exam-question"> -->
-	<!-- <h3>[16~18]. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 말로 가장 알맞은 것을 고르십시오.</h3> -->
-	<!-- <h4>16.</h4> -->
-	<!-- <ul> -->
-		<!-- <li></li> -->
-	<!-- </ul> -->
-	<!-- <div class="topik-textbox"> -->
-		<!-- <p>(&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;).</p> -->
-	<!-- </div> -->
-	<!-- <ol> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-	<!-- </ol> -->
-	<!-- <h4>17.</h4> -->
-	<!-- <ul> -->
-		<!-- <li></li> -->
-	<!-- </ul> -->
-	<!-- <div class="topik-textbox"> -->
-		<!-- <p>(&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;).</p> -->
-	<!-- </div> -->
-	<!-- <ol> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-	<!-- </ol> -->
-	<!-- <h4>18.</h4> -->
-	<!-- <ul> -->
-		<!-- <li></li> -->
-	<!-- </ul> -->
-	<!-- <div class="topik-textbox"> -->
-		<!-- <p>(&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;).</p> -->
-	<!-- </div> -->
-	<!-- <ol> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-	<!-- </ol> -->
-<!-- </div> -->
+<div class="exam-question">
+	<h2>[16~18]. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 말로 가장 알맞은 것을 고르십시오.</h2>
+	<h3>16.</h3>
+	<ul>
+		<li>타조 - struś</li>
+		<li>적 - wróg</li>
+		<li>다가오다 - nadchodzić</li>
+		<li>모래 - piach</li>
+		<li>파묻다 - zakopać</li>
+		<li>위험 - niebezpieczeństwo</li>
+		<li>위기 - zagrożenie</li>
+		<li>피하다 - unikać</li>
+		<li>비유하다 - porównywać (coś do czegoś)</li>
+		<li>사실(은) - tak naprawdę</li>
+		<li>행동 - zachowanie</li>
+		<li>청각 - słuch</li>
+		<li>발달하다 - być rozwiniętym</li>
+		<li>울리다 - drgać</li>
+		<li>파악하다 - rozpoznać, zidentyfikować</li>
+		<li>먹이 - pokarm, pożywienie</li>
+		<li>구하다 = 찾다</li>
+		<li>공격하다 - atakować</li>
+	</ul>
+	<div class="topik-textbox">
+		<p>타조는 멀리서 적이 다가와도 머리를 모래에 파묻고 있다. 그래서 위험이나 위기를 모르는 척 피하는 사람을 타조에 비유하곤 한다. 그런데 사실 타조는 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 위해 이런 행동을 한다. 생각보다 청각이 발달한 타조는 땅에서 울리는 발소리를 듣고 적이 오는지를 파악하려는 것이다.</p>
+	</div>
+	<ol>
+		<li>적의 움직임을 알기</li>
+		<li>먹이를 빨리 구하기</li>
+		<li>머리를 깨끗이 씻기</li>
+		<li>다른 타조를 공격하기</li>
+	</ol>
+</div>
+<div class="exam-question">
+	<h3>17.</h3>
+	<ul>
+		<li>기기 - urządzenie</li>
+		<li>의존 - uzależnienie, bycie zależnym</li>
+		<li>-도 - poziom</li>
+		<li>직접 - bezpośrednio, samodzielnie</li>
+		<li>기억하다 - zapamiętać</li>
+		<li>이전 = 과거</li>
+		<li>뇌 - mózg</li>
+		<li>방식 - sposób</li>
+		<li>-량 - ilość</li>
+		<li>줄어들다 = 줄다 - zmniejszyć się</li>
+		<li>단순하다 - być prostym</li>
+		<li>정보 - informacje</li>
+		<li>압도적 - przytłaczający</li>
+		<li>처리하다 - przetwarzać</li>
+		<li>저장하다 - zapisać (tutaj: zapamiętać)</li>
+	</ul>
+	<div class="topik-textbox">
+		<p>디지털 기기에 대한 의존도가 높아지면서 사람들이 무언가 직접 기억해야 할 일은 줄었다. 그래서 이전보다 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 생각할 수 있다. 그런데 뇌를 사용하는 방식이 이전과 달라졌을 뿐 사용량이 줄어든 것이 아니다. 과거에는 단순히 정보를 기억하는 데 뇌를 썼다면 이제는 과거보다 압도적으로 많아진 정보를 처리하는 데 사용하고 있는 것이다.</p>
+	</div>
+	<ol>
+		<li>뇌를 덜 사용한다고</li>
+		<li>기억력이 좋아졌다고</li>
+		<li>저장해야 할 정보가 많다고</li>
+		<li>디지털 기기를 많이 쓴다고</li>
+	</ol>
+</div>
+<div class="exam-question">
+	<h3>18.</h3>
+	<ul>
+		<li>쓰다 - być słonym</li>
+		<li>꺼리다 - unikać</li>
+		<li>본능 - instynkt</li>
+		<li>관계 - związek</li>
+		<li>식물 - roślina</li>
+		<li>독(성) - trucizna</li>
+		<li>해롭다 - być szkodliwym (dla czegoś/kogoś)</li>
+		<li>무의식적으로 - podświadomie</li>
+		<li>위험하다 - być niebezpiecznym</li>
+		<li>여기다 = 생각하다 - uważać</li>
+		<li>거부하다 - odmówić</li>
+		<li>지나치다 - być przesadnym/nadmiernym</li>
+		<li>과식 - przejadanie się</li>
+		<li>피하다 - unikać</li>
+		<li>자신의 - własny</li>
+		<li>보호하다 - chronić</li>
+		<li>멀리하다 - trzymać się z daleka (od czegoś)</li>
+		<li>변하다 = 바뀌다</li>
+		<li>막다 - zapobiec (czemuś)</li>
+	</ul>
+	<div class="topik-textbox">
+		<p>사람들은 일반적으로 쓴맛을 꺼린다. 이것은 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 본능과 관계가 있다. 식물 중에는 독성이 있어 몸에 해로운 것들이 있다. 그런데 이런 독이 있는 식물은 보통 쓴맛이 난다. 따라서 사람들은 무의식적으로 쓴맛이 나는 것을 위험하다고 여기고 이를 거부하게 되는 것이다.</p>
+	</div>
+	<ol>
+		<li>지나친 과식을 피하려는</li>
+		<li>자신의 몸을 보호하려는</li>
+		<li>맛없는 음식을 멀리하려는</li>
+		<li>입맛이 변하는 것을 막으려는</li>
+	</ol>
+</div>
 
-<!-- <div class="exam-question"> -->
-	<!-- <h3>[19~20]. 다음을 읽고 물음에 답하십시오.</h3> -->
-	<!-- <ul> -->
-		<!-- <li></li> -->
-	<!-- </ul> -->
-	<!-- <div class="topik-textbox"> -->
-		<!-- <p>(&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;).</p> -->
-	<!-- </div> -->
-	<!-- <h4>19. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 알맞은 것을 고르십시오.</h4> -->
-	<!-- <ol> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-	<!-- </ol> -->
-	<!-- <h4>20. 윗글의 주제로 가장 알맞은 것을 고르십시오.</h4> -->
-	<!-- <ol> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-	<!-- </ol> -->
-<!-- </div> -->
+<div class="exam-question">
+	<h2>[19~20]. 다음을 읽고 물음에 답하십시오.</h2>
+	<ul>
+		<li>익다 - dojrzewać</li>
+		<li>화학 - chemia</li>
+		<li>물질 - związki</li>
+		<li>겉 - wierzch</li>
+		<li>속 - wnętrze</li>
+		<li>대개 - </li>
+		<li>자연적 - naturalny</li>
+		<li>숙성 - dojrzewanie</li>
+		<li>~에 비하다 - w porównaniu (z czymś)</li>
+		<li>향 - zapach</li>
+		<li>떨어지다 - tracić (np. smak)</li>
+		<li>껍질 - skórka, łupina</li>
+		<li>남다 - pozostawać</li>
+		<li>지속 = 계속</li>
+		<li>건강 - zdrowie</li>
+		<li>생기다 - pojawiać się</li>
+		<li>또는 - albo</li>
+		<li>또한 - ponadto</li>
+		<li>인공 - sztuczny</li>
+	</ul>
+	<div class="topik-textbox">
+		<p>과일을 빨리 익히기 위해 화학 물질이 사용되기도 한다. 그러나 화학 물질로 익힌 과일은 겉은 익었지만 속이 잘 익지 않은 경우가 많다. 그래서 화학 물질로 익힌 과일은 대개 자연적으로 숙성된 과일에 비해 맛과 향이 떨어진다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 화학 물질이 과일 껍질에 남게 될 수도 있다. 이런 과일을 지속적으로 먹으면 건강에 문제가 생기게 된다.</p>
+	</div>
+	<h3>19. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 알맞은 것을 고르십시오.</h3>
+	<ol>
+		<li>또는</li>
+		<li>또한</li>
+		<li>그래도</li>
+		<li>그러면</li>
+	</ol>
+</div>
+<div class="exam-question">
+	<h3>20. 이 글의 내용과 같은 것을 고르십시오.</h3>
+	<ol>
+		<li>과일을 껍질까지 먹으면 건강에 좋다.</li>
+		<li>과일 향을 좋게 만드는 화학 물질이 있다.</li>
+		<li>화학 물질을 사용하면 과일이 속까지 잘 익는다.</li>
+		<li>자연 숙성 과일이 인공 숙성 과일보다 맛이 더 낫다.</li>
+	</ol>
+</div>
 
 </body></html>
 
