--- a/viiilo/zajecia/24-25z/jk2/index.html
+++ b/viiilo/zajecia/24-25z/jk2/index.html
@@ -158,7 +158,7 @@
 				<td>30 maja 2025</td>
 				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture" rowspan="2"><a href="viiilo/zajecia/24-25z/jk2/zajecia/10">10. 학교에 가기 전에 수영을 해요</a></td>
-				<td class="schedule-presentation" rowspan="2"></td>
+				<td class="schedule-presentation" rowspan="2">인사말 - 감사, 축하, 식사, 사과, 전화, 자기 전, 마중, 배웅</td>
 			</tr>
 			<tr>
 				<th scope="row">21</th>
@@ -169,15 +169,13 @@
 				<th scope="row">22</th>
 				<td>13 czerwca 2025</td>
 				<td class="schedule-lecture">Lekcja</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-lecture" rowspan="2"><a href="viiilo/zajecia/24-25z/jk2/zajecia/11">10. 한국 음식을 만들 수 있어요?</a></td>
+				<td class="schedule-presentation" rowspan="2"></td>
 			</tr>
 			<tr>
 				<th scope="row">23</th>
 				<td>27 czerwca 2025</td>
 				<td class="schedule-lecture">Lekcja</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-presentation"></td>
 			</tr>
 		</tbody>
 </body></html>
