--- a/viiilo/zajecia/24-25z/jk2/index.html
+++ b/viiilo/zajecia/24-25z/jk2/index.html
@@ -35,15 +35,13 @@
 			<tr>
 				<th scope="row">1</th>
 				<td>18 października 2024</td>
-				<td class="schedule-lecture">Lekcja 1</td>
+				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture" colspan="2"><a href="viiilo/zajecia/24-25z/jk2/zajecia/1">powtórzenie materiału z poziomu podstawowego</a></td>
 			</tr>
-		</tbody>
-		<tbody>
 			<tr>
 				<th scope="row" rowspan="2">2</th>
 				<td rowspan="2">22 października 2024</td>
-				<td class="schedule-lecture" rowspan="2">Lekcja 2</td>
+				<td class="schedule-lecture" rowspan="2">Lekcja</td>
 				<td class="schedule-lecture"><a href="viiilo/zajecia/24-25z/jk2/zajecia/2-2">01. 무슨 음식을 좋아해요</a></td>
 				<td class="schedule-presentation"><a href="viiilo/zajecia/24-25z/jk2/zajecia/2-1">부침개 요리법 (przepis na placki koreańskie)</a></td>
 			</tr>
@@ -53,40 +51,36 @@
 			<tr>
 				<th scope="row">3</th>
 				<td>8 listopada 2024</td>
-				<td class="schedule-lecture">Lekcja 3</td>
+				<td class="schedule-lecture">Lekcja</td>
 			</tr>
-		</tbody>
-		<tbody>
 			<tr>
 				<th scope="row">4</th>
 				<td>15 listopada 2024</td>
-				<td class="schedule-lecture">Lekcja 4</td>
+				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture" rowspan="2" colspan="2"><a href="viiilo/zajecia/24-25z/jk2/zajecia/3">03. 백화점에서 쇼핑할 거예요</a></td>
 			</tr>
 			<tr>
 				<th scope="row">5</th>
 				<td>22 listopada 2024</td>
-				<td class="schedule-lecture">Lekcja 5</td>
+				<td class="schedule-lecture">Lekcja</td>
 			</tr>
-		</tbody>
-		<tbody>
 			<tr>
 				<th scope="row">6</th>
 				<td>29 listopada 2024</td>
-				<td class="schedule-lecture">Lekcja 6</td>
+				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture" rowspan="5"><a href="viiilo/zajecia/24-25z/jk2/zajecia/4">04. 더 큰 사이즈는 없어요?</a></td>
 				<td class="schedule-presentation"><a href="viiilo/zajecia/24-25z/jk2/zajecia/4-1">한국의 상징 호랑이 (tygrys jako symbol Korei)</a></td>
 			</tr>
 			<tr>
 				<th scope="row">7</th>
 				<td>6 grudnia 2024</td>
-				<td class="schedule-lecture">Lekcja 7</td>
+				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-presentation"><a href="viiilo/zajecia/24-25z/jk2/zajecia/4-2">인사법 (kultura kłaniania się)</a></td>
 			</tr>
 			<tr>
 				<th scope="row" rowspan="3">8</th>
 				<td rowspan="3">13 grudnia 2024</td>
-				<td class="schedule-lecture" rowspan="3">Lekcja 8</td>
+				<td class="schedule-lecture" rowspan="3">Lekcja</td>
 				<td class="schedule-presentation"><a href="viiilo/zajecia/24-25z/jk2/zajecia/5-1">손글씨 (pismo odręczne)</a></td>
 			</tr>
 			<tr>
@@ -95,163 +89,135 @@
 			<tr>
 				<td class="schedule-presentation"><a href="viiilo/zajecia/24-25z/jk2/zajecia/5-2">높임법 (honoryfikatywność)</a></td>
 			</tr>
-		</tbody>
-		<tbody>
 			<tr>
 				<th scope="row">9</th>
 				<td>19 grudnia 2024</td>
-				<td class="schedule-lecture">Lekcja 9</td>
+				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture" rowspan="2" colspan="2"><a href="viiilo/zajecia/24-25z/jk2/zajecia/5">05. 세종식당이 어디에 있어요?</a></td>
 			</tr>
 			<tr>
 				<th scope="row">10</th>
 				<td>10 stycznia 2025</td>
-				<td class="schedule-lecture">Lekcja 10</td>
+				<td class="schedule-lecture">Lekcja</td>
 			</tr>
-		</tbody>
-		<tbody>
 			<tr>
 				<th scope="row">11</th>
 				<td>17 stycznia 2025</td>
-				<td class="schedule-lecture">Lekcja 11</td>
+				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture" rowspan="2"><a href="viiilo/zajecia/24-25z/jk2/zajecia/6">06. 한국미술관까지 어떻게 가요?</a></td>
 				<td class="schedule-presentation"><a href="viiilo/zajecia/24-25z/jk2/zajecia/6-1">한자 (漢字, znaki chińskie)</a></td>
 			</tr>
 			<tr>
 				<th scope="row">12</th>
 				<td>14 lutego 2025</td>
-				<td class="schedule-lecture">Lekcja 12</td>
+				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-presentation"><a href="viiilo/zajecia/24-25z/jk2/zajecia/6-2">설 (Nowy Rok)</a></td>
 			</tr>
-		</tbody>
-		<tbody>
 			<tr>
 				<th scope="row">13</th>
 				<td>21 lutego 2025</td>
-				<td class="schedule-lecture">Lekcja 13</td>
+				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture" rowspan="2"><a href="viiilo/zajecia/24-25z/jk2/zajecia/7">07. 제주도에 가려고 해요</a></td>
-				<td class="schedule-presentation"><a href="viiilo/zajecia/24-25z/jk2/zajecia/7-1">한반도 지리 (geografia Półwyspu Koreańskiego)</a></td>
+				<td class="schedule-presentation" rowspan="2"><a href="viiilo/zajecia/24-25z/jk2/zajecia/7-1">한반도 지리 (geografia Półwyspu Koreańskiego)</a></td>
 			</tr>
 			<tr>
 				<th scope="row">14</th>
 				<td>28 lutego 2025</td>
-				<td class="schedule-lecture">Lekcja 14</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-lecture">Lekcja</td>
 			</tr>
-		</tbody>
-		<tbody>
 			<tr>
-				<th scope="row">15</th>
-				<td>7 marca 2025</td>
-				<td class="schedule-lecture">Lekcja 15</td>
+				<th scope="row" rowspan="2">15</th>
+				<td rowspan="2">7 marca 2025</td>
+				<td class="schedule-exam">Sprawdzian</td>
+				<td class="schedule-exam">1~7과</td>
+				<td class="schedule-exam"></td>
+			</tr>
+			<tr>
+				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture"></td>
 				<td class="schedule-presentation"></td>
 			</tr>
-		</tbody>
-		<tbody>
 			<tr>
 				<th scope="row">16</th>
 				<td>14 marca 2025</td>
-				<td class="schedule-lecture">Lekcja 16</td>
+				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture"></td>
 				<td class="schedule-presentation"></td>
 			</tr>
-		</tbody>
-		<tbody>
 			<tr>
 				<th scope="row">17</th>
 				<td>21 marca 2025</td>
-				<td class="schedule-lecture">Lekcja 17</td>
+				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture"></td>
 				<td class="schedule-presentation"></td>
 			</tr>
-		</tbody>
-		<tbody>
 			<tr>
 				<th scope="row">18</th>
 				<td>28 marca 2025</td>
-				<td class="schedule-lecture">Lekcja 18</td>
+				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture"></td>
 				<td class="schedule-presentation"></td>
 			</tr>
-		</tbody>
-		<tbody>
 			<tr>
 				<th scope="row">19</th>
 				<td>4 kwietnia 2025</td>
-				<td class="schedule-lecture">Lekcja 19</td>
+				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture"></td>
 				<td class="schedule-presentation"></td>
 			</tr>
-		</tbody>
-		<tbody>
 			<tr>
 				<th scope="row">20</th>
 				<td>11 kwietnia 2025</td>
-				<td class="schedule-lecture">Lekcja 20</td>
+				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture"></td>
 				<td class="schedule-presentation"></td>
 			</tr>
-		</tbody>
-		<tbody>
 			<tr>
 				<th scope="row">21</th>
 				<td>25 kwietnia 2025</td>
-				<td class="schedule-lecture">Lekcja 21</td>
+				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture"></td>
 				<td class="schedule-presentation"></td>
 			</tr>
-		</tbody>
-		<tbody>
 			<tr>
 				<th scope="row">22</th>
 				<td>16 maja 2025</td>
-				<td class="schedule-lecture">Lekcja 22</td>
+				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture"></td>
 				<td class="schedule-presentation"></td>
 			</tr>
-		</tbody>
-		<tbody>
 			<tr>
 				<th scope="row">23</th>
 				<td>23 maja 2025</td>
-				<td class="schedule-lecture">Lekcja 23</td>
+				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture"></td>
 				<td class="schedule-presentation"></td>
 			</tr>
-		</tbody>
-		<tbody>
 			<tr>
 				<th scope="row">24</th>
 				<td>30 maja 2025</td>
-				<td class="schedule-lecture">Lekcja 24</td>
+				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture"></td>
 				<td class="schedule-presentation"></td>
 			</tr>
-		</tbody>
-		<tbody>
 			<tr>
 				<th scope="row">25</th>
 				<td>6 czerwca 2025</td>
-				<td class="schedule-lecture">Lekcja 25</td>
+				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture"></td>
 				<td class="schedule-presentation"></td>
 			</tr>
-		</tbody>
-		<tbody>
 			<tr>
 				<th scope="row">26</th>
 				<td>13 czerwca 2025</td>
-				<td class="schedule-lecture">Lekcja 26</td>
+				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture"></td>
 				<td class="schedule-presentation"></td>
 			</tr>
-		</tbody>
-		<tbody>
 			<tr>
 				<th scope="row">27</th>
 				<td>27 czerwca 2025</td>
-				<td class="schedule-lecture">Lekcja 27</td>
+				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture"></td>
 				<td class="schedule-presentation"></td>
 			</tr>
