--- a/viiilo/zajecia/24-25z/jk2/zajecia/7-1/index.html
+++ b/viiilo/zajecia/24-25z/jk2/zajecia/7-1/index.html
@@ -22,6 +22,8 @@
 
 <h3>어휘</h3>
 
+<h4>행정구역</h4>
+
 <ul>
 	<li>지리 - geografia</li>
 	<li>지도 - mapa</li>
@@ -33,6 +35,8 @@
 	<li>읍 - miasteczko</li>
 	<li>리 - wieś</li>
 </ul>
+
+<h4>날씨</h4>
 
 <ul>
 	<li>해 - słońce</li>
