--- a/uj/zajecia/24-25z/wats3-1/index.html
+++ b/uj/zajecia/24-25z/wats3-1/index.html
@@ -146,8 +146,8 @@
 				<th scope="row" rowspan="2">4</th>
 				<td rowspan="2">8 listopada 2024</td>
 				<td class="schedule-exam">Kolokwium 1 (8.00–8.30)</td>
-				<td class="schedule-exam"></td>
-				<td class="schedule-exam"><!--a href="uj/zajecia/24-25z/wats3-1/testy/1"></a--></td>
+				<td class="schedule-exam">bieżące sprawy</td>
+				<td class="schedule-exam"><a href="uj/zajecia/24-25z/wats3-1/testy/1">급식비 지원 '제로'…배달시키거나 도시락 싸는 소방관</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture">Zajęcia</td>
