--- a/uj/zajecia/24-25z/wats3-1/zajecia/4/index.html
+++ b/uj/zajecia/24-25z/wats3-1/zajecia/4/index.html
@@ -38,9 +38,21 @@
 <h3>번역</h3>
 
 <p>0. 청소년 정신과 진료 4년 새 65%↑…"스마트폰이 주요 원인"</p>
+<ul>
+	<li>65% więcej nastolatków u psychiatry niż jeszcze 4 lata temu - główną przyczyną smartfony</li>
+</ul>
 <p>1. 정신과 병원을 찾는 10대들이 4년 새 60% 넘게 늘었습니다.</p>
+<ul>
+	<li>Liczba nastolatków leczących się psychiatrycznie wzrosła w przeciągu 4 lat o ponad 60%.</li>
+</ul>
 <p>2-1. 병원을 찾는 데엔 입시 스트레스나 학교 폭력 등 다양한 이유가 있겠지만,</p>
+<ul>
+	<li>Choć powody leczenia są różne i mogą to być m.in. stres lub przemoc szkolna,</li>
+</ul>
 <p>2-2. 최근엔 스마트폰을 비롯한 과도한 디지털 기기 사용이 주 원인으로 꼽히고 있습니다.</p>
+<ul>
+	<li>to ostatnio jako główny powód wskazywane jest nadmierne używanie smartfonów wraz z innymi urządzeniami elektronicznymi.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -65,11 +77,29 @@
 <h3>번역</h3>
 
 <p>3. 정신과 치료를 받으러 온 초등학교 6학년 아동.</p>
+<ul>
+	<li>Spotkaliśmy ucznia 6. klasy szkoły podstawowej, który właśnie przyszedł do psychiatry.</li>
+</ul>
 <p>4. 진료를 기다리면서 스마트폰 게임을 합니다.</p>
+<ul>
+	<li>Czekając na wejście do gabinetu, gra on na swoim smartfonie.</li>
+</ul>
 <p>5. "엄마 아빠랑 따로 (스마트폰 사용) 규칙 정한 적 있어?"</p>
+<ul>
+	<li>"Czy ustalałeś z rodzicami specjalne zasady korzystania z telefonu?</li>
+</ul>
 <p>6. 스마트폰 게임뿐 아니라 짧은 길이의 자극적인 동영상도 청소년들 사이 유행입니다.</p>
+<ul>
+	<li>Nie tylko gry, ale również krótkie, pobudzające filmiki są popularne wśród młodzieży.</li>
+</ul>
 <p>7-1. 스마트폰 의존은 특히 코로나 시기를 거치며 늘어나,</p>
+<ul>
+	<li>Uzależnienie od smartfonów, które wzrosło szczególnie w okresie pandemii COVID-19,</li>
+</ul>
 <p>7-2. 우울이나 불안 장애와 함께 나타나고 있다.</p>
+<ul>
+	<li>łączy się z depresją oraz zaburzeniami lękowymi.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -96,7 +126,15 @@
 <h3>번역</h3>
 
 <p>8-1. 송민재 정신건강의학과 전문의는 "소아기에는 특히나 전두엽 기능의 발달이 이루어지는 시기이니까.</p>
+<ul>
+	<li>Według Songa Minjae, lekarza specjalista pracujący na oddziale zdrowia psychicznego, „dzieciństwo to szczególny okres, w którym rozwijają się funkcje płata czołowego,</li>
+</ul>
 <p>8-2. 영상 시청이나 이런 것들로 인해서 악영향을 받을 수 있다."라고 말했다.</p>
+<ul>
+	<li>w związku z czym oglądanie wideo oraz podobne czynności mogą mieć na jego rozwój negatywny wpływ.</li>
+</ul>
+
+<h2 class="homework">Praca domowa</h2>
 
 <h3>어휘</h3>
 
