--- a/uj/zajecia/24-25z/wats3-2/index.html
+++ b/uj/zajecia/24-25z/wats3-2/index.html
@@ -156,8 +156,8 @@
 				<th scope="row" rowspan="2">4</th>
 				<td rowspan="2">8 listopada 2024</td>
 				<td class="schedule-exam">Kolokwium 1 (9.45–10.15)</td>
-				<td class="schedule-exam"></td>
-				<td class="schedule-exam"><!--a href="uj/zajecia/24-25z/wats3-2/testy/1"></a--></td>
+				<td class="schedule-exam">sprawy kryminalne</td>
+				<td class="schedule-exam"><a href="uj/zajecia/24-25z/wats3-2/testy/1">16년 만에 드러난 진실, 동거녀 ‘시멘트 살인’ 피의자 “혐의 인정”</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture">Zajęcia</td>
