--- a/uj/zajecia/24-25z/wats3-2/zajecia/4/index.html
+++ b/uj/zajecia/24-25z/wats3-2/zajecia/4/index.html
@@ -40,12 +40,33 @@
 <h3>번역</h3>
 
 <p>0. 김정은도 삽 들었다‥나무 집착 북한 속사정은?</p>
+<ul>
+	<li>Kim Dzong Un też wziął do ręki łopatę; Dlaczego Korea Północna ma obsesję na punkcie drzew?</li>
+</ul>
 <p>1. 이번 주 금요일은 식목일이죠.</p>
+<ul>
+	<li>Właśnie w ten piątek jest Dzień Sadzenia Drzew.</li>
+</ul>
 <p>2-1. 북한에도 우리 식목일 같은 식수절이 3월에 있는데</p>
+<ul>
+	<li>Podobnie jak my obchodzimy nasze święto, w Korei Północnej w marcu przypada Święto Sadzenia Drzew.</li>
+</ul>
 <p>2-2. 올해 유독 북한이 나무 심기가 곧 애국이라며</p>
+<ul>
+	<li>Szczególnie w tym roku zaczęto mówić tam, że sadzenie drzew jest przejawem patriotyzmu,</li>
+</ul>
 <p>2-3. 식수절의 의미를 강조하고 나섰습니다.</p>
+<ul>
+	<li>podkreślając wagę tego święta.</li>
+</ul>
 <p>3-1. 청년과 근로자, 군인 뿐 아니라 북한 고위 간부들까지</p>
+<ul>
+	<li>Nie tylko młodzież, robotnicy, żołnierze, ale nawet najwyższe władze KRLD</li>
+</ul>
 <p>3-2. 총출동해 나무를 심습니다.</p>
+<ul>
+	<li>w totalnej mobilizacji sadzą drzewa.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -78,10 +99,25 @@
 <h3>번역</h3>
 
 <p>4. 조선사회주의여성동맹 부장은 "나무를 심는 사업은 우리 당의 정책을 심고 순결한 애국의 마음을 심으며 양심을 묻는 사업입니다."라고 했습니다.</p>
+<ul>
+	<li>Według Przewodniczącej Związku Socjalistycznych Kobiet Koreańskich, „Sadzenie drzew to projekt, który sadzi politykę naszej partii, sadzi prawdziwy patriotyzm oraz odnosi się do naszego sumienia”.</li>
+</ul>
 <p>5-1. 북한 매체들은 특히 올해는 지방발전정책 이행을 위해 어느 때보다 목재 생산이 중요하다며</p>
+<ul>
+	<li>Północnokoreańskie media szczególnie w tym roku bardziej niż kiedykolwiek podkreślają, jak ważna jest produkcja drewna dla prowadzenia polityki rozwoju regionalnego,</li>
+</ul>
 <p>5-2. 나무 심기의 중요성을 강조합니다.</p>
+<ul>
+	<li>oraz kładą nacisk na znaczenie sadzenia drzew.</li>
+</ul>
 <p>6-1. 무분별한 벌목으로 산림이 황폐화된 북한은</p>
+<ul>
+	<li>W Korei Północnej, gdzie lasy zostały zdewastowane przez niekontrolowaną wycinkę,</li>
+</ul>
 <p>6-2. 김정은 위원장 집권과 동시에 산림 복원을 강력한 국가사업으로 내세웠습니다.</p>
+<ul>
+	<li>od czasu przejęcia władzy przez Kim Dzong Una odtwarzanie lasów zostało uznane za bardzo istotny projekt państwowy.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -109,12 +145,20 @@
 <h3>번역</h3>
 
 <p>7-1. 김정은 북한 국무위원장은 2015년 신년사에서</p>
+<ul>
+	<li>W 2015 r. w przemówieniu noworocznym przewodniczący Komisji Obrony Narodowej Kim Dzong Un</li>
+</ul>
+
+<h2 class="homework">Praca domowa</h2>
+
 <p>7-2. "산림복구 전투를 힘있게 벌여</p>
 <p>7-3. 조국의 산들을 푸른 숲이 우거진 황금산으로 전변시켜야 합니다."라고 했습니다.</p>
 <p>8-1. 하지만 이런 노력에도</p>
 <p>8-2. 북한 전체 산림의 30% 정도는 여전히 황무지 상태로 남아있습니다.</p>
 <p>9-1. 전문가들은 무분별한 벌목도 문제지만</p>
 <p>9-2. 해마다 나무를 심어도 활착률, 즉 심은 나무의 생존률이 낮다는 점이 걸림돌이라 지적합니다.</p>
+
+<hr class="homework">
 
 <h3>어휘</h3>
 
