--- a/uj/zajecia/25-26z/assk/index.html
+++ b/uj/zajecia/25-26z/assk/index.html
@@ -106,23 +106,24 @@
 				<th rowspan="2" scope="row">6</th>
 				<td rowspan="2">18 listopada 2025</td>
 				<td class="schedule-exam">Kolokwium 1</td>
-				<td class="schedule-exam"></td>
+				<td class="schedule-exam">muzyka; literatura; kulinaria</td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture">Zajęcia 6</td>
-				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/assk/zajecia/4">malarstwo</a></td>
+				<td class="schedule-lecture" rowspan="2"><a href="uj/zajecia/25-26z/assk/zajecia/4">malarstwo</a></td>
 			</tr>
 			<tr>
-				<th scope="row">7</th>
-				<td>25 listopada 2025</td>
-				<td class="schedule-lecture">Zajęcia 7</td>
-				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/assk/zajecia/5">propaganda</a></td>
+				<th rowspan="2" scope="row">7</th>
+				<td rowspan="2">25 listopada 2025</td>
+				<td class="schedule-lecture" rowspan="2">Zajęcia 7</td>
+			</tr>
+			<tr>
+				<td class="schedule-lecture" rowspan="2"><a href="uj/zajecia/25-26z/assk/zajecia/5">propaganda</a></td>
 			</tr>
 			<tr>
 				<th scope="row">8</th>
 				<td>2 grudnia 2025</td>
 				<td class="schedule-lecture">Zajęcia 8</td>
-				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
 				<th scope="row">9</th>
@@ -188,7 +189,7 @@
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 11</td>
-				<td class="schedule-presentation">Beniamin Bracki</td>
+				<td class="schedule-presentation">Beniamin Bracki - Socrealistyczne modele twórczości operowej: analiza porównawcza wybranych aspektów oper „Bunt Żaków” i „Morze Krwi (피바다)”</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 12</td>
@@ -200,7 +201,7 @@
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 14</td>
-				<td class="schedule-presentation">Jakub Kmiecik</td>
+				<td class="schedule-presentation">Jakub Kmiecik - Porównanie przedstawienia natury w malarstwie koreańskim i europejskim z XVIII i XIX wieku</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 15</td>
