--- a/uj/zajecia/25-26z/licc/lectures/4/index.html
+++ b/uj/zajecia/25-26z/licc/lectures/4/index.html
@@ -11,9 +11,7 @@
 	<link rel="stylesheet" media="print" href="uj/.res/print.css">
 </head><body class="home">
 
-<h1>Legacy and Influence of Confucian Culture on Modern Korean Society<br><br>The Korean Family</h1>
-
-<!-- <h2>Questionnaire</h2> -->
+<h1>Legacy and Influence of Confucian Culture on Modern Korean Society<br><br>Korean Family</h1>
 
 <h2>1. Concept of <i>Uri</i> (우리)</h2>
 
