--- a/uj/zajecia/25-26z/licc/index.html
+++ b/uj/zajecia/25-26z/licc/index.html
@@ -108,13 +108,12 @@
 			</tr>
 			<tr>
 				<td class="schedule-lecture">Lecture 6</td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture" rowspan="2"><a href="uj/zajecia/25-26z/licc/lectures/4">Korean Family</a></td>
 			</tr>
 			<tr>
 				<th scope="row">7</th>
 				<td>25 November 2025</td>
 				<td class="schedule-lecture">Lecture 7</td>
-				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
 				<th scope="row">8</th>
@@ -154,7 +153,7 @@
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 4</td>
-				<td class="schedule-presentation">Beniamin Bracki</td>
+				<td class="schedule-presentation">Beniamin Bracki - Ritual and Music: <i>Jongmyo jeryeak</i> in Korea's Confucian tradition</td>
 			</tr>
 			<tr>
 				<th scope="row" rowspan="5">12</th>
