--- a/uj/zajecia/24-25z/wats3-1/zajecia/5/index.html
+++ b/uj/zajecia/24-25z/wats3-1/zajecia/5/index.html
@@ -43,9 +43,21 @@
 <h3>번역</h3>
 
 <p>0. 13층에서 떨어지는 충격…'치사율 3배'인데 안전띠 착용률 뚝</p>
+<ul>
+	<li>Tak jakby spaść z 13. piętra – mimo 3-krotnie wyższej śmiertelności coraz mniej osób zapina pasy</li>
+</ul>
 <p>1. 고속도로에서 안전띠 착용률이 계속 낮아지고 있는 것으로 나타났다.</p>
+<ul>
+	<li>Z danych wynika, że liczba osób zapinających pasy podczas jazdy na autostradzie wciąż spada.</li>
+</ul>
 <p>2-1. 안전띠를 매지 않은 상태에서 교통사고가 나면</p>
+<ul>
+	<li>W przypadku wypadku drogowego niezapięcie pasów prowadzi do</li>
+</ul>
 <p>2-2. 치사율이 3배 이상 높아지고 중상을 입을 가능성도 더 커진다.</p>
+<ul>
+	<li>trzykrotnie większej śmiertelności oraz większego ryzyka doznania poważnych uszkodzeń ciała.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -73,11 +85,29 @@
 <h3>번역</h3>
 
 <p>3. 5일 한국도로공사에 따르면 최근 5년간(2019~2023년) 고속도로 안전띠 착용률(전 좌석 착용 기준)은 연속해서 하락했다.</p>
+<ul>
+	<li>Według Koreańskiej Dyrekcji Dróg Krajowych i Autostrad z dnia 5 maja w przeciągu ostatnich pięciu lat (2019-2023) liczba osób zapinających pasy na autostradzie (na wszystkich siedzeniach w samochodzie) stopniowo spadała.</li>
+</ul>
 <p>4. 2019년엔 91.4%였던 것이 2021년엔 86.9%로 떨어졌고, 지난해엔 83.4%까지 낮춰졌다.</p>
+<ul>
+	<li>Z 91,4% w 2019 r. odsetek ten spadł do 86,9% w 2021 r., a w ubiegłym roku aż do 83,4%.</li>
+</ul>
 <p>5-1. 지난 2018년 9월부터 고속도로를 포함한 모든 도로에서 안전띠 착용이 의무화됐지만,</p>
+<ul>
+	<li>Od września 2018 r. istnieje obowiązek zapinania pasów na wszystkich drogach, w tym na autostradach.</li>
+</ul>
 <p>5-2. 고속도로에서 유독 잘 지켜지지 않는다.</p>
+<ul>
+	<li>Jednak szczególnie w przypadku tych drugich nie jest on przestrzegany.</li>
+</ul>
 <p>6-1. 차량 운행 속도가 100㎞를 넘는 고속도로에서</p>
+<ul>
+	<li>Jazda samochodem po autostradzie z prędkością przekraczającą 100 km/h</li>
+</ul>
 <p>6-2. 안전띠를 매지 않으면 자칫 치명적인 결과를 낳을 수 있다.</p>
+<ul>
+	<li>bez zapiętych pasów często może być śmiertelna w skutkach.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -99,12 +129,33 @@
 <h3>번역</h3>
 
 <p>7-1. 무엇보다 안전띠를 하지 않으면</p>
+<ul>
+	<li>Przede wszystkim, jeśli nie zapniemy pasów,</li>
+</ul>
 <p>7-2. 사고 때 차량 밖으로 튕겨 나가거나</p>
+<ul>
+	<li>to podczas wypadku możemy zostać wyrzuceni z samochodu</li>
+</ul>
 <p>7-3. 차량 내부 또는 동승자와 부딪혀</p>
+<ul>
+	<li>bądź też uderzyć o wnętrze samochodu lub o współpasażerów,</li>
+</ul>
 <p>7-4. 사망에 이를 위험이 커지기 때문이다.</p>
+<ul>
+	<li>co zwiększa ryzyko śmierci.</li>
+</ul>
 <p>8-1. 실제로 최근 5년간 고속도로에서 발생한 교통사고로 숨진 사람 중 25%가</p>
+<ul>
+	<li>W rzeczywistości 25% ofiar wypadków na autostradach podczas ostatnich 5 lat</li>
+</ul>
 <p>8-2. 안전띠를 매지 않았던 것으로 나타났다.</p>
+<ul>
+	<li>nie miało zapiętych pasów.</li>
+</ul>
 <p>9. 고속도로 교통사고 사망자 4명 중 1명꼴이다.</p>
+<ul>
+	<li>Jest to jedna na cztery osoby, które poniosły śmierć podczas wypadku.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -124,11 +175,30 @@
 <h3>번역</h3>
 
 <p>10-1. 시속 100㎞로 달리는 자동차에서 안전띠를 착용하지 않을 경우</p>
+<ul>
+	<li>W przypadku wypadku auta pędzącego z prędkością 100 km/h osoba bez zapiętych pasów</li>
+</ul>
 <p>10-2. 13층 높이에서 땅으로 떨어지는 충격과 거의 같다.</p>
+<ul>
+	<li>doznaje siły uderzenia porównywalnej do upadku z 13. piętra na ziemię.</li>
+</ul>
 <p>11-1. 이 때문에 안전띠 미착용 시 사고가 나면</p>
+<ul>
+	<li></li>
+	<li>Z tego powodu, jeśli dojdzie do takiego wypadku,</li>
+</ul>
 <p>11-2. 차량 내 의자나 천장, 유리창 또는 동승자와 부딪혀</p>
+<ul>
+	<li>to osoby znajdujące się w aucie mogą uderzyć o fotel, sufit, szybę albo współpasażera</li>
+</ul>
 <p>11-3. 머리·목·가슴 등에 복합중상을 입을 가능성이</p>
+<ul>
+	<li>i doznać kompleksowych, poważnych obrażeń głowy, szyi, klatki piersiowych lub innych części ciała.</li>
+</ul>
 <p>11-4. 안전띠 착용 때보다 최대 9배나 높아진다.</p>
+<ul>
+	<li>Jest to 9-krotnie większe ryzyko niż wtedy, gdy pasy są zapięte.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -145,6 +215,8 @@
 <p>12. 치사율(사고 100건당 사망자 수)도 앞좌석은 2.8배, 뒷좌석은 3.7배나 올라간다.</p>
 <p>13-1. 상황이 이런데도 우리나라의 뒷좌석 안전띠 착용률은 32% 안팎으로</p>
 <p>13-2. 교통안전 선진국으로 알려진 독일(95%)에 비해 상당히 낮다.</p>
+
+<h2 class="homework">Praca domowa</h2>
 
 <h3>어휘</h3>
 
