--- a/uj/zajecia/24-25z/wats3-2/zajecia/5/index.html
+++ b/uj/zajecia/24-25z/wats3-2/zajecia/5/index.html
@@ -48,11 +48,29 @@
 <h3>번역</h3>
 
 <p>0. 수신호하고 따로 걷고…첩보영화처럼 北공작원 만난 창원간첩단</p>
+<ul>
+	<li>Komunikacja gestami i szczególny sposób chodzenia – niemal filmowe spotkanie changwońskiej siatki szpiegowskiej z północnokoreańskim agentem</li>
+</ul>
 <p>1-1. 창원간첩단 '자주통일 민중전위'(이하 자통) 조직원들이</p>
+<ul>
+	<li>Członkowie siatki szpiegowskiej z miasta Changwon o nazwie Awangarda Ludowa na Rzecz Autonomicznego Zjednoczenia (zwana dalej Awangardą Ludową)</li>
+</ul>
 <p>1-2. 미리 정해둔 수신호를 이용해가며</p>
+<ul>
+	<li>używając wcześniej ustalonych gestów</li>
+</ul>
 <p>1-3. 북한 공작원들과 '첩보영화'처럼 접선해왔다.</p>
+<ul>
+	<li>jak w filmie szpiegowskim potajemnie spotykali się z północnokoreańskimi agentami.</li>
+</ul>
 <p>2-1. 자통 총책 황모(60) 씨 등 조직원 4명의 공소장에는</p>
+<ul>
+	<li>W akcie oskarżenia przeciwko 4 osobom, w tym Hwangowi (60 l.), głównodowodzącemu Awangardy Ludowej,</li>
+</ul>
 <p>2-2. 이들이 2016년부터 해외에서 북한 공작원들과 접선한 과정이 상세히 담겼다.</p>
+<ul>
+	<li>znajdują się szczegóły przebiegu sekretnych spotkań członków grupy z północnokoreańskimi agentami za granicą od 2016 r.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -73,10 +91,25 @@
 <h3>번역</h3>
 
 <p>3-1. 황 씨는 2016년 3월 캄보디아로 출국해서</p>
+<ul>
+	<li>Hwang w marcu 2016 r. wyjechał do Kambodży,</li>
+</ul>
 <p>3-2. 한 리조트에 머무르며 북한 문화교류국 소속 공작원들과 만났다.</p>
+<ul>
+	<li>gdzie w jednym z ośrodków turystycznych spotkał się z agentami Biura Wymiany Kulturowej z Korei Północnej.</li>
+</ul>
 <p>4-1. 황 씨가 투숙한 방은 두 개의 객실 사이 문이 연결돼 있어</p>
+<ul>
+	<li>Pokój, w którym zatrzymał się Hwang, był połączony drzwiami z sąsiednim</li>
+</ul>
 <p>4-2. 출입이 가능한 '커넥팅 룸' 형식으로,</p>
+<ul>
+	<li>z możliwości przechodzenia z jednego do drugiego pokoju.</li>
+</ul>
 <p>4-3. 옆방에는 북한 공작원 2명이 이미 투숙 중이었다.</p>
+<ul>
+	<li>W pokoju obok już wcześniej zatrzymało się dwóch agentów z KRLD.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -99,11 +132,29 @@
 <h3>번역</h3>
 
 <p>5-1. 숙소 앞에서 공작원들과 수신호를 통해 서로의 정체를 확인한 뒤</p>
+<ul>
+	<li>Przed wejściem do miejsca zakwaterowania Hwang oraz agenci gestami potwierdzili wzajemną tożsamość,</li>
+</ul>
 <p>5-2. 각자 객실로 들어간 이들은 외부 출입도 하지 않은 채</p>
+<ul>
+	<li>po czym udali się do swoich pokojów, a następnie nie wychodząc w ogóle na zewnątrz</li>
+</ul>
 <p>5-3. 리조트 안에만 머무르며 활동 내용을 논의했다.</p>
+<ul>
+	<li>omawiali szczegóły swojej działalności.</li>
+</ul>
 <p>6-1. 황 씨는 자통 경남 서부지역 책임자 정모(44) 씨에게</p>
+<ul>
+	<li>Hwang, powiedziawszy Jeongowi (44 l.), który w organizacji odpowiedzialny był za zachodnią część prowincji Gyeongsang Południowy,</li>
+</ul>
 <p>6-2. "북한 공작원과 뜨겁게 동지적인 사랑을 나누는 것이 제일 큰 의미가 있다"며</p>
+<ul>
+	<li>że "największą wartość ma dzielenie się braterską miłością z agentami z Korei Północnej",</li>
+</ul>
 <p>6-3. 2019년 6월 캄보디아에서 북한 공작원들과 접선하도록 했다.</p>
+<ul>
+	<li>w czerwcu 2019 r. faktycznie spotkał się z nimi w tajemnicy w Kambodży.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -125,13 +176,39 @@
 <h3>번역</h3>
 
 <p>7-1. 황 씨는 출국 전 정 씨에게</p>
+<ul>
+	<li>Przed wylotem Hwang powiedział Jeongowi,</li>
+</ul>
 <p>7-2. "오후 5시에 배낭을 매고 관광 지도를 손에 들고 있으면</p>
+<ul>
+	<li>że „jeśli o 5 po południu będziesz miał założony plecak i turystyczną mapę w ręce,</li>
+</ul>
 <p>7-3. 그 주변에서 북한 공작원이 손수건으로 땀을 닦는 행동을 할 것"이라며</p>
+<ul>
+	<li>to znajdujący się w pobliżu agenci z Korei Północnej wytrą chusteczką pot,”</li>
+</ul>
 <p>7-4. 서로 알아보는 방법을 설명해줬다.</p>
+<ul>
+	<li>wyjaśniając w ten sposób, jak obie strony mają się wzajemnie rozpoznać.</li>
+</ul>
 <p>8-1. 또 약속된 번호로 전화하라며</p>
+<ul>
+	<li>Ponadto kazał też Jeongowi zadzwonić na umówiony numer wyjaśniając, w jaki sposób ma on doprowadzić do spotkania:</li>
+</ul>
 <p>8-2. "이쪽은 '권'이고, 저쪽은 '박'이다.</p>
+<ul>
+	<li>„To jest »Kwon«, a to jest »Park«.</li>
+</ul>
 <p>9-1. 오후 5시에 접선이 불발되면 오후 6시에 한 번 더 접선하고,</p>
+<ul>
+	<li>Gdyby spotkanie o 5 po południu nie wypaliło, spróbuj jeszcze raz godzinę później,</li>
+</ul>
 <p>9-2. 또 불발되면 바로 전화하라"고 구체적인 접선 방법을 알려줬다.</p>
+<ul>
+	<li>a jeśli wtedy też nie wypali, to od razu do mnie zadzwoń”.</li>
+</ul>
+
+<h2 class="homework">Praca domowa</h2>
 
 <h3>어휘</h3>
 
@@ -158,6 +235,8 @@
 <p>11-1. 정 씨는 실제로 황 씨가 알려준 방법으로</p>
 <p>11-2. 앙코르와트 부근에서 공작원들과 접선에 성공했고,</p>
 <p>11-3. 카페와 호텔에서 활동 동향 등을 보고했다.</p>
+
+<hr class="homework">
 
 <h3>어휘</h3>
 
